# THIRD_LAB_OOP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: eightangle.h  figure.h  square.h  triangle.h
src/: eightangle.cpp  figure.cpp  square.cpp  triangle.cpp
tests/: test_figures.cpp
